<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tourrapidcity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/parks_photo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/colorText"
            android:text="@string/cp_intro"/>

        <TextView
            android:id="@+id/parks_visit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorParksBackground"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:text="@string/cp_visit"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/colorText"
            android:text="@string/cp_linking_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/flood_photo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/colorText"
            android:text="@string/cp_flood_plain_text_one"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/flood_plain_map"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorText"
            android:text="@string/cp_flood_plain_text_two"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorText"
                android:text="@string/cp_visit_history"/>

            <ImageView
                android:id="@+id/bh_know_image_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/cp_bh_knowledge_network"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorParksBackground"
            android:padding="16dp"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:text="@string/cp_source_listing"/>

    </LinearLayout>

</ScrollView>