<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tourrapidcity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rc_welcome_photo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/colorText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/rc_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorText"
            android:text="@string/rc_body"/>

        <LinearLayout
            android:id="@+id/rc_logo_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/thumb_nail_height"
                android:layout_height="@dimen/thumb_nail_height"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/rapidcity_logo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/rc_join_us"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/rc_join_us_body"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorRCBackground"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:text="@string/rc_source_listing"/>

    </LinearLayout>

</ScrollView>